--- a/src/dashboard/dashboard.css
+++ b/src/dashboard/dashboard.css
@@ -1,7 +1,187 @@
 .main-container {
-    display: grid;
-    min-height: 100vh;
-    min-height: 100dvh;
+  display: grid;
+  height: 100vh;
+  height: 100dvh;
+  overflow: hidden;
+}
+
+.content-section {
+  height: 100vh;
+  overflow-y: hidden;
+}
+
+/* Dashboard Nav bar ---------------------------------------------------*/
+
+.nav-bar {
+  display: flex !important;
+  position: relative;
+  flex-direction: column;
+  gap: 2.25rem; /* 36px */
+  background-color: #fff;
+
+  width: 46px;
+  height: 100%;
+}
+
+.logo-box.side-nav-logo {
+  display: none;
+}
+
+.nav-section {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 19;
+  height: 100vh; /* Full height */
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.section.dark .md {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.hidden {
+  display: none;
+}
+
+.block {
+  display: block;
+}
+
+.close-nav-bar {
+  position: absolute;
+  right: 8px;
+  top: 0;
+  font-size: 1rem;
+  border: none;
+  background-color: transparent;
+}
+
+.show-nav {
+  display: none;
+}
+
+.divider {
+  display: none;
+}
+
+.nav-list {
+  padding-inline: 0.25rem; 
+}
+
+.nav-list li {
+  list-style-type: none;
+  padding: 0.625rem 0.5rem; /* 10px 8px */
+  border-radius: 0.5rem; /* 8px */
+  transition: background-color 0.5s ease-in;
+}
+
+.nav-list li.active {
+  background-color: var(--light-blue);
+}
+
+.nav-path {
+  background-color: var(--light-blue);
+}
+
+.nav-bar li:active {
+  background-color: var(--light-blue);
+}
+
+.logout-group {
+  margin-top: auto;
+}
+
+.logout-group li {
+  list-style-type: none;
+  padding: 0.625rem 0.5rem; /* 10px 8px */
+  margin-top: auto;
+}
+.hide-nav {
+  display: none;
+}
+
+.nav-group {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding-top: 3rem;
+}
+
+/* Navigation ----------------------------------------------------------*/
+.navigation {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding: 1rem; /* 16px */
+
+  height: 5rem; /* 80px */
+  border-bottom: 1px solid var(--border-gray);
+
+  overflow: hidden;
+}
+
+.main-title {
+  display: none;
+}
+
+.info {
+  display: flex;
+  align-items: center;
+}
+
+.notify {
+  position: relative;
+}
+
+.notify-color {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0.75rem; /* 12px */
+  height: 0.75rem; /* 12px */
+  border-radius: 50%;
+  background-color: var(--red);
+}
+
+.admin-group {
+  display: flex;
+  align-items: center;
+  margin-left: 1.25rem;
+  gap: 0.5rem;
+}
+
+.admin-details {
+  display: none;
+}
+
+.admin {
+  color: var(--text-black);
+  font-size: 0.75rem; /* 14px */
+  font-weight: 500;
+  line-height: 20px;
+  margin-bottom: 2px;
+}
+
+.admin-role {
+  color: var(--text-gray);
+  font-size: 0.5rem; /* 10px */
+  font-weight: 500;
+  line-height: 12px;
+}
+
+.menu-btn {
+  display: flex;
+  height: auto;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 1.5rem;
 }
 
 /* Large mobile styles */
@@ -10,14 +190,115 @@
 
 /* Tablet styles */
 @media (min-width: 601px) {
-    
+  .navigation {
+    padding: 1.25rem 1.5rem 1.25rem 1.75rem; /* 20px 24px 20px 28px */
+  }
+  .nav-group {
+    height: calc(100% - 36px);
+    padding-top: 0;
+  }
+  .logo-box {
+    display: block;
+  }
+  .admin-group {
+    margin-left: 1.25rem; /* 20px */
+  }
+  .admin {
+    font-size: 0.875rem; /* 14px */
+  }
+
+  .admin-role {
+    font-size: 0.625rem; /* 10px */
+  }
+
+  .main-title {
+    display: block;
+    font-size: 1.25rem; /* 20px */
+    font-weight: 700;
+    line-height: 1.5;
+    color: var(--text-black);
+  }
+  .show-nav {
+    display: block;
+    position: absolute;
+    left: -12px;
+    width: 1.5rem; /* 24px */
+    height: 1.5rem; /* 24px */
+    border-radius: 50%;
+    background-color: var(--secondary-bg);
+    border: none;
+    cursor: pointer;
+  }
+
+  .divider {
+    display: block;
+    width: 100%;
+    height: 3px;
+    border-radius: 4px;
+    background-color: var(--light-gray);
+    margin-bottom: 1.875rem; /* 30px */
+  }
+
+  .logo-box.side-nav-logo {
+    display: block;
+  }
+
+  .nav-left-group {
+    display: none;
+  }
+
+  .nav-list {
+    padding-inline: 0; 
+  }
+}
+
+@media (min-width: 600px) {
+  .nav-bar {
+    display: flex !important;
+    position: relative;
+    flex-direction: column;
+    gap: 2.25rem; /* 36px */
+    padding: 1.5rem; /* 24px */
+    background-color: #fff;
+    border-right: 1px solid var(--border-gray);
+
+    width: 88px;
+  }
+
+  .nav-section {
+    position: relative;
+    display: block !important;
+    width: 88px; /* */
+    z-index: auto;
+  }
+
+  .admin-details {
+    display: block;
+  }
+  .menu-btn {
+    display: none;
+  }
+
+  .close-nav-bar {
+    display: none;
+  }
+
+  .main-container {
+    grid-template-columns: 88px 1fr;
+  }
 }
 
 /* Desktop styles */
 @media (min-width: 1023px) {
-    .main-container {
-        grid-template-columns: 88px 1fr;
-      background-color: lightcoral;
-      font-size: 22px;
-    }
+
+  .hide-nav {
+    position: absolute;
+    right: -12px;
+    width: 1.5rem; /* 24px */
+    height: 1.5rem; /* 24px */
+    border-radius: 50%;
+    background-color: var(--secondary-bg);
+    border: none;
+    cursor: pointer;
+  }
 }
